# msgraph-rs

./: Cargo.toml  README.md
examples/: access_token.rs  get_user.rs  list_users.rs  revoke_signin.rs  send_email.rs  send_email_attachment.rs  send_email_html.rs
src/: client.rs  constants.rs  lib.rs  pagination.rs
src/resources/auth/: token.rs
src/resources/users/: methods.rs
