[package]
name = "msgraph-rs"
version = "0.1.2"
authors = ["Bryan Abbott <whitefox82@proton.me>"]
description = "A Rust library for interacting with Microsoft Graph API"
license = "GPL-3.0-only"
repository = "https://github.com/whitefox82/msgraph-rs"
documentation = "https://docs.rs/msgraph-rs"
readme = "README.md"
keywords = ["microsoft", "graph", "api", "oauth", "msgraph"]
edition = "2021"

[dependencies]
# HTTP client for making requests (blocking and json support)
reqwest = { version = "0.12.7", features = ["json", "blocking"] }

# JSON serialization/deserialization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Optional logging functionality
log = "0.4"
env_logger = "0.11.5"

# Async support (optional, if you plan to use async code)
tokio = { version = "1.0", features = ["full"], optional = true }

# dotenv for environment variable management
dotenv = "0.15"

# For send_email_attachment.rs
base64 = "0.22.1"

[dev-dependencies]
# Dependencies only required for testing
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"

[features]
# Feature to enable async support
async = ["tokio"]

[badges]
travis-ci = { repository = "whitefox82/msgraph-rs" }
